--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Churn Predictor</title>
+  <link rel="icon" type="image/x-icon" href="icon.jpg">
 
   <!-- Font -->
   <link href="https://fonts.cdnfonts.com/css/jetbrains-mono-2" rel="stylesheet">
